--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,6 +1,6 @@
 $orange: #e76f51;
 $light-orange: #f4a261;
-$dark-blue: #264653;
+$dark-blue: #0a242e;
 $blue-green: #2a9d8f;
 $yellow: #e9c46a;
 
@@ -17,7 +17,7 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 
-// $primary:      $blue-green;
+// $primary:      $dark-blue;
 // $secondary:    $dark-blue;
 
 // Accordion
