--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,1 +1,6 @@
 @use 'custom';
+
+// #bground-intro {
+//     // height: min(400px, 80vh);
+//     background-image: url(../img/background01.jpg);
+// }
