--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,8 +1,9 @@
-$orange: #e76f51;
+$orange: #e34f26;
 $light-orange: #f4a261;
-$dark-blue: #0a242e;
-$blue-green: #2a9d8f;
-$yellow: #e9c46a;
+$dark-blue: #003566;
+$blue: #173ccc;
+$yellow: #f9c22e;
+$pink: #e01a4f;
 
 // White and gray colors
 $white:    #fff;
@@ -17,8 +18,9 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 
-// $primary:      $dark-blue;
-// $secondary:    $dark-blue;
+// $primary:   $blue;
+$warning:   $yellow;
+$secondary:    $orange;
 
 // Accordion
 $accordion-icon-color:                    $orange;
